force-app/main/default/objects/CSMB_Terms_and_Condition__c/CSMB_Terms_and_Condition__c.object-meta.xml
<CustomObject>
    <description>CSMB Terms and Conditions store Ideal Terms for the Repository records</description>
    <label>CSMB Terms and Condition</label>
    <nameField>
        <displayFormat>Terms{0000}</displayFormat>
        <label>Ideal Term Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CSMB Terms and Conditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>