force-app/main/default/objects/CSMB_Terms_and_Condition__c/fields/Standard_Term__c.field-meta.xml
<CustomField>
    <fullName>Standard_Term__c</fullName>
    <description>Standard_Term in the Terms and Conditions Repository.</description>
    <label>Standard Term</label>
    <referenceTo>CSMB_Terms_and_Conditions_Maintenance__c</referenceTo>
    <relationshipLabel>CSMB Terms and Conditions</relationshipLabel>
    <relationshipName>CSMB_Terms_and_Conditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>