force-app/main/default/objects/CSMB_Terms_and_Condition__c/fields/Standard_Terms_and_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Standard_Terms_and_Conditions__c</fullName>
    <label>Standard Terms and Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>