force-app/main/default/objects/CSMB_Terms_and_Condition__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Status of the terms and conditions.</description>
    <inlineHelpText>Uncheck the checkbox if the Terms and conditions are not active anymore.</inlineHelpText>
    <label>Status</label>
    <type>Checkbox</type>
</CustomField>